# byteMe

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  package.json.backup  pnpm-lock.yaml  run.js  test.js  undefined.tmp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backup/: AsyncPatternQueue.js  ModelPersistence.js
byte-me/: README.md  jest.config.js (new)  package.json (modify)
codeMods/: make-modular.js  string-concat-to-template-literals.js
data/: model.json  scores.json  server-health.json
docs/: git-workflow.md  odysseus-handshake.md  publishing-runbook.md  repo-setup.md
hooks/: package.json  pre-commit  test-gpg.js
legacy/: README.md  package-lock.json  package.json
models/: model.json
odysseus/: gladys-lane.convergence.md  gladys-lane.invitation.md
scripts/: install.js
src/: ModelManager.js  NeuralNetwork.js  analysis.js  binary.rs  blid.rs  canon.rs  cli.rs  compare.js  concert.rs  contact.rs  encode.rs  hydro.rs  index.js  initialize.js  inputData.js  interloop.rs  intro.rs  lib.rs  main.rs  metrics.rs  narrate.rs  output.rs  patterns.rs  rational.rs  sha256.rs  study.rs
test/: analysis.test.js  convertToHex.test.js  predictNextBits.test.js  testCases.js
test-repo/: README.md
tests/: binaryModel.test.js  canon_extreme.rs  cli_integration.rs  cross_language.rs  narrator.rs  properties.rs
verify/: README.md  crosscheck.mjs  postflight.sh  preflight.sh  publish-phased.sh  publish.sh
(+126 files in other folders)
